--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,44 @@
-<h1>HOME</h1>
+<section class="section-white">
+    <div class="container">
+
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="assets/img/banner1.png" alt="...">
+                    <!-- <div class="carousel-caption">
+                        <h2>Heading</h2>
+                    </div> -->
+                </div>
+                <div class="item">
+                    <img src="assets/img/banner2.png" alt="...">
+                    <!-- <div class="carousel-caption">
+                        <h2>Heading</h2>
+                    </div> -->
+                </div>
+                <div class="item">
+                    <img src="assets/img/banner3.png" alt="...">
+                    <!-- <div class="carousel-caption">
+                        <h2>Heading</h2>
+                    </div> -->
+                </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+
+    </div>
+</section>
