--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
-    <nav class="navbar navbar-default navbar-fixed-top navcarbox" role="navigation">
+    <!-- <nav class="navbar navbar-default navbar-fixed-top navcarbox" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
@@ -19,66 +18,67 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <!--<li class="active"><a href="#">หน้าแรก</a></li>-->
                     <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                     <li *ngIf="!accessToken"><a href="#" data-toggle="modal" data-target="#myModal">ลงชื่อเข้าใช้</a></li>
                     <li class="dropdown" *ngIf="accessToken">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">บัญชีผู้ใช้ <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" [routerLink]="['profile']"><i class="fa fa-smile-o"></i>&nbsp; สวัสดี {{displayName}}</a></li>
-                            <li><a href="#"><i class="fa fa-briefcase"></i>&nbsp; รายการฝากขาย</a></li>
+                            <li><a href="#" [routerLink]="['sell']"><i class="fa fa-briefcase"></i>&nbsp; รายการฝากขาย</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#" (click)="this.auth.signOut()"><span class="glyphicon glyphicon-off"></span>&nbsp; ออกจากระบบ</a></li>
                         </ul>
                     </li>
-
-
-
-
-
                 </ul>
             </div>
         </div>
-    </nav>
-</div>
-<!--<nav class="navbar navbar-default">
-    <div class="container-fluid">
-      
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    </nav> -->
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-            <a class="navbar-brand" style="margin-left: 10px; margin-top: 1px;" [routerLink]="['']">
-                <img width="100px" class="img-responsive" src="assets/img/mebooks.png">
-            </a>
+                <a class="navbar-brand" style="margin-left: 10px; margin-top: 1px;" [routerLink]="['']">
+                    <img width="100px" class="img-responsive" src="assets/img/mebooks.png">
+                </a>
+            </div>
+
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="col-sm-3 col-md-3">
+                    <form class="navbar-form" role="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="ค้นหาหนังสือ" name="search">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                    <li *ngIf="!accessToken"><a href="#" data-toggle="modal" data-target="#myModal">ลงชื่อเข้าใช้</a></li>
+                    <li class="dropdown" *ngIf="accessToken">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">บัญชีผู้ใช้ <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" [routerLink]="['profile']"><i class="fa fa-smile-o"></i>&nbsp; สวัสดี {{displayName}}</a></li>
+                            <li><a href="#" [routerLink]="['sell']"><i class="fa fa-briefcase"></i>&nbsp; รายการขายของฉัน</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#" (click)="this.auth.signOut()"><span class="glyphicon glyphicon-off"></span>&nbsp; ออกจากระบบ</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-        
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="#">ประเมินราคาหนังสือ <span class="sr-only">(current)</span></a></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                <li *ngIf="!accessToken"><a href="#" data-toggle="modal" data-target="#myModal">ลงชื่อเข้าใช้</a></li>
-                <li class="dropdown" *ngIf="accessToken">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">บัญชีผู้ใช้ <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#" [routerLink]="['/profile']"><i class="fa fa-smile-o"></i>&nbsp; สวัสดี {{displayName}}</a></li>
-                        <li><a href="#"><i class="fa fa-briefcase"></i>&nbsp; รายการฝากขาย</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#" (click)="this.auth.signOut()"><span class="glyphicon glyphicon-off"></span>&nbsp; ออกจากระบบ</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>-->
-
+    </nav>
+</div>
 
 <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
@@ -89,88 +89,67 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <img class="img-modal" src="assets/img/mebooks.png">
             </div>
-            <h3>ลงชื่อเข้าใช้งาน</h3>
             <div class="modal-body">
                 <div style="text-align: center">
-                    <button class="loginBtn loginBtn--facebook" (click)="facebook()"> Login with Facebook </button>
+                    <button class="btn btn-primary btn-lg btn3d" (click)="facebook()"> FACEBOOK </button>
                 </div>
 
                 <div class="login-or">
                     <hr class="hr-or">
-                    <span class="span-or">or</span>
+                    <span class="span-or"><p>หรือ</p></span>
                 </div>
-                <!--
-                <form role="form" [formGroup]="loginForm" (ngSubmit)="login()">
+
+                <form role="form">
                     <div class="form-group">
-                        <label for="inputUsernameEmail">Email</label>
-                        <input type="text" class="form-control" id="inputUsernameEmail" placeholder="Email" formControlName="email">
+                        <label for="inputUsernameEmail">อีเมล</label>
+                        <input type="text" class="form-control" id="inputUsernameEmail" placeholder="Email" name="email">
                     </div>
                     <div class="form-group">
-                        <a class="pull-right" href="#">Forgot password?</a>
-                        <label for="inputPassword">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" formControlName="password">
-                    </div>
-                    <div class="checkbox ">
-                        <label>
-                      <input type="checkbox">
-                      Remember me </label>
+                        <a class="pull-right" href="#">ลืมรหัสผ่าน</a>
+                        <label for="inputPassword">รหัสผ่าน</label>
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
                     </div>
                     <p>ยังไม่มีบัญชีผู้ใช้ใช่ไหม? <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">ลงทะเบียนที่นี่</a></p>
-                    <button type="submit" class="btn btn btn-primary">
-                    Log In
+                    <button type="submit" class="btn btn-primary">
+                    เข้าสู่ระบบ
                   </button>
 
-                </form>-->
+                </form>
 
             </div>
             <br>
         </div>
 
-        <!--Modal Signup
+        <!-- Modal Signup -->
         <div class="modal-content" id="signupbox" style="display:none;">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <img class="img-modal" src="assets/img/mebooks.png">
             </div>
             <div class="modal-body">
-
                 <h3>สมัครสมาชิก</h3>
-                <div class="login-or">
-                    <hr class="hr-or">
-                </div>
-
-                <form role="form" [formGroup]="userForm" (ngSubmit)="signup()">
+                <form role="form">
                     <div class="form-group">
-                        <label>ชื่อ</label>
-                        <input type="name" class="form-control" placeholder="ชื่อ" formControlName="fnameSignup">
+                        <label for="inputUsernameEmail">อีเมล</label>
+                        <input type="text" class="form-control" id="inputUsernameEmail" placeholder="Email" name="email">
                     </div>
                     <div class="form-group">
-                        <label>นามสกุล</label>
-                        <input type="name" class="form-control" placeholder="นามสกุล" formControlName="lnameSignup">
+                        <label for="inputPassword">รหัสผ่าน</label>
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
                     </div>
                     <div class="form-group">
-                        <label>โทรศัพท์มือถือ</label>
-                        <input type="name" class="form-control" placeholder="08XXXXXXXX" formControlName="telSignup">
+                        <label for="inputPassword">ยืนยันรหัสผ่าน</label>
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Confirm Password" name="password">
                     </div>
-                    <div class="form-group">
-                        <label for="inputEmail">อีเมล</label>
-                        <input type="email" class="form-control" id="inputEmail" placeholder="อีเมล" formControlName="emailSignup">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputPasswordSignup">รหัสผ่าน</label>
-                        <input type="password" class="form-control" id="inputPasswordSignup" placeholder="อย่างน้อง 6 ตัว" formControlName="passwordSignup">
-                    </div>
-
-                    <br>
-                    <button type="submit" class="btn btn btn-primary">
-                    Register
+                    <button type="submit" class="btn btn-primary">
+                    ลงทะเบียน
                   </button>
                 </form>
                 <br>
                 <p>ถ้ามีบัญชีผู้ใช้แล้ว <a id="signinlink" href="#" onclick="$('#signupbox').hide(); $('#loginbox').show()">เข้าสู่ระบบที่นี่</a>
             </div>
             <br>
-        </div>-->
+        </div>
     </div>
 </div>
 
