--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,14 +1,15 @@
 /* ===================== */
 
 .carousel-inner {
-    border-radius: 15px;
-    margin-top: 18%;
+    border-radius: 0px;
+    margin-top: -8%;
+    width: 100%;
 }
 
 @media (min-width: 768px) {
     .carousel-inner {
-        border-radius: 15px;
-        margin-top: 5%;
+        border-radius: 0px;
+        margin-top: -14%;
     }
 }
 
