--- a/src/app/profiles/profile.component.html
+++ b/src/app/profiles/profile.component.html
@@ -6,13 +6,9 @@
 
 
 <div class="container">
-    <h4 class="panel-title" id="main">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"> บัญชีผู้ใช้</a>
-    </h4>
-    <div>
-        <p>{{users}}</p>
-
-    </div>
+    <h1 class="panel-title" id="main">
+        <a [routerLink]="['']">หน้าแรก</a>><a>บัญชีผู้ใช้</a>
+    </h1>
     <br>
     <div class="row">
         <div class="col-md-12">
@@ -81,11 +77,11 @@
                                     </div>
 
 
-                                    <div class="form-group">
-                                        <div class="btn btn-outline-success" id="done">
+                                    <div class="form-group" id="btn-account">
+                                        <div class="btn btn-outline-success" id="btn-account">
                                             <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">
-                                บันทึกข้อมูล
-                              </button>
+                                                บันทึกข้อมูล
+                                            </button>
                                         </div>
                                     </div>
                                 </form>
@@ -123,12 +119,12 @@
 
                             <div class="form-group" id="plus">
                                 <div class="btn btn-outline-success" style="margin-left: 15%;">
-                                    <button [hidden]="countAdress==2" [hidden]="this.increse" type="button" class="btn btn-success " (click)="increaseAdd('add')">
+                                    <button [hidden]="countAdress==2" [hidden]="this.increse" type="button" class="btn btn-success" (click)="increaseAdd('add')">
                             + Add another address
                           </button>
                                 </div>
                                 <div class="btn btn-outline-success" style="margin-left: -3%" *ngIf="this.increse">
-                                    <button type="button" class="btn btn-danger " (click)="cancalAdd()" id="address">
+                                    <button type="button" class="btn btn-danger" (click)="cancalAdd()" id="address">
                             ปิด
                           </button>
                                 </div>
@@ -269,7 +265,7 @@
 
 
                                     <div class="form-group">
-                                        <div class="btn btn-outline-success" id="done">
+                                        <div class="btn btn-outline-success" id="btn-account">
                                             <button type="submit" class="btn btn-success " [disabled]="!addressForm.form.valid">
                                                 เพิ่ม
                                             </button>
@@ -277,11 +273,8 @@
                                     </div>
                                 </form>
                             </div>
-
-
                         </div>
                     </div>
-
                 </div>
 
 
@@ -331,48 +324,6 @@
                                     </table>
                                 </div>
                             </div>
-                            <!--<div>
-                                <h4 class="panel-title" id="historys">
-                                    <p>ธนาคารของฉัน</p>
-                                </h4>
-                                <br>
-                                <div class="table-responsive">
-                                    <table class="table table-bordered">
-                                        <thead>
-                                            <tr>
-                                                <th>ชื่อบัญชี</th>
-                                                <th>ธนาคาร</th>
-                                                <th>เลขที่บัญชี</th>
-                                                <th>สาขา</th>
-                                                <th>จังหวัด</th>
-                                                <th></th>
-                                            </tr>
-                                        </thead>
-                                        <tbody *ngIf="countBanks!=0">
-                                            <tr *ngFor="let bank of banksUsers">
-                                                <td>{{bank.value.account}}</td>
-                                                <td>{{bank.value.bank}}</td>
-                                                <td>{{bank.value.numberbank}}</td>
-                                                <td>{{bank.value.branch}}</td>
-                                                <td>{{bank.value.province}}</td>
-                                                <td>
-                                                    <button class="btn btn-danger btn-xs" (click)="removeBank(bank.key)">
-                                                    ลบ
-                                                </button>
-                                                </td>
-                                            </tr>
-                                            <tr *ngIf="!countBanks">
-                                                <td>-</td>
-                                                <td>-</td>
-                                                <td>-</td>
-                                                <td>-</td>
-                                                <td>-</td>
-                                                <td>-</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>-->
                             <br>
                             <div class="form-group" id="plus">
                                 <div class="btn btn-outline-success" style="margin-left: 15%;">
@@ -381,7 +332,7 @@
                           </button>
                                 </div>
                                 <div class="btn btn-outline-success" style="margin-left: -3%" *ngIf="this.plus">
-                                    <button type="button" id="bank" class="btn btn-danger " (click)="cancalBank()">
+                                    <button type="button" id="bank" class="btn btn-danger" (click)="cancalBank()">
                             ปิด
                           </button>
                                 </div>
@@ -511,7 +462,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="btn btn-outline-success" id="done">
+                                        <div class="btn btn-outline-success" id="btn-account">
                                             <button type="submit" class="btn btn-success " [disabled]="!bankForm.form.valid">
                                                 บันทึก
                                             </button>
