create signin signup

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,16 @@ body {
     font-family: 'Kanit', sans-serif;
 }
 
+.btn {
+    border-radius: 0px;
+    font-family: 'Kanit', sans-serif;
+}
+
 p {
+    font-family: 'Kanit', sans-serif;
+}
+
+h3 {
     font-family: 'Kanit', sans-serif;
 }
 
