--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,21 +13,12 @@
             <div class="carousel-inner">
                 <div class="item active">
                     <img src="assets/img/banner1.png" alt="...">
-                    <!-- <div class="carousel-caption">
-                        <h2>Heading</h2>
-                    </div> -->
                 </div>
                 <div class="item">
                     <img src="assets/img/banner2.png" alt="...">
-                    <!-- <div class="carousel-caption">
-                        <h2>Heading</h2>
-                    </div> -->
                 </div>
                 <div class="item">
                     <img src="assets/img/banner3.png" alt="...">
-                    <!-- <div class="carousel-caption">
-                        <h2>Heading</h2>
-                    </div> -->
                 </div>
             </div>
 
@@ -39,6 +30,127 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
         </div>
-
+        <br><br>
+        <h4>หนังสือแนะนำ</h4>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <div class="my-list">
+                <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                <br><br>
+                <span>ชีววิทยา</span>
+                <span class="pull-right">110 บาท</span>
+                <div class="offer">สำหรับมัธยมปลายที่สนใจ...</div>
+                <div class="detail">
+                    <p>มือ 2</p>
+                    <img src="https://3.bp.blogspot.com/-UyR5Qttdcwc/V-YI-VVlxwI/AAAAAAAAAD0/SrM6Y-KLi0Qpqb5EdoJvoKEka0MWPBjigCLcB/s1600/112752233.jpg" alt="dsadas" />
+                    <a href="#" class="btn btn-info">ซื้อ</a>
+                    <a href="#" class="btn btn-info">Details</a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
