--- a/src/app/profiles/profile.component.css
+++ b/src/app/profiles/profile.component.css
@@ -4,6 +4,10 @@
      font-family: 'Kanit', sans-serif;
  }
  
+ h4 {
+     font-family: 'Kanit', sans-serif;
+ }
+ 
  button {
      font-family: 'Kanit', sans-serif;
  }
