--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,10 @@
 /* ===================== */
 
+.btn {
+    border-radius: 0px;
+    font-family: 'Kanit', sans-serif;
+}
+
 .carousel-inner {
     border-radius: 0px;
     margin-top: -8%;
@@ -11,6 +16,10 @@
         border-radius: 0px;
         margin-top: -14%;
     }
+}
+
+h4 {
+    font-family: 'Kanit', sans-serif;
 }
 
 
@@ -80,4 +89,74 @@
     .container {
         max-width: 930px;
     }
+}
+
+
+/* ----------------------------------------------- */
+
+img {
+    max-width: 100%;
+}
+
+* {
+    transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -webkit-transition: all .5s ease
+}
+
+.my-list {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #f5efef;
+    float: left;
+    margin: 15px 0;
+    border-radius: 5px;
+    box-shadow: 2px 3px 0px #e4d8d8;
+    position: relative;
+    overflow: hidden;
+}
+
+.my-list h3 {
+    text-align: left;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+    margin: 0px;
+    padding: 0px;
+    border-bottom: 1px solid #ccc4c4;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+}
+
+.my-list span {
+    float: left;
+    font-weight: bold;
+}
+
+.my-list span:last-child {
+    float: right;
+}
+
+.my-list .offer {
+    width: 100%;
+    float: left;
+    margin: 5px 0;
+    border-top: 1px solid #ccc4c4;
+    margin-top: 5px;
+    padding-top: 5px;
+    color: #afadad;
+}
+
+.detail {
+    position: absolute;
+    top: -107%;
+    left: 0;
+    text-align: center;
+    background: #fff;
+    height: 100%;
+    width: 100%;
+}
+
+.my-list:hover .detail {
+    top: 0;
 }
