--- a/src/app/sell/sell.component.css
+++ b/src/app/sell/sell.component.css
@@ -35,3 +35,73 @@ a {
 
 
 /* ========================== */
+
+#tablesell {
+    margin-left: 3%;
+    width: 100%
+}
+
+td#engineer {
+    width: 35%;
+}
+
+@media (min-width: 768px) {
+    #tablesell {
+        margin-left: 8%;
+        width: 100%
+    }
+    td#engineer {
+        width: 5%;
+    }
+}
+
+#tablesell2 {
+    margin-left: 3%;
+    width: 100%
+}
+
+@media (min-width: 768px) {
+    #tablesell2 {
+        margin-left: 8%;
+        width: 100%
+    }
+}
+
+#tablesell3 {
+    margin-left: 3%;
+    width: 100%
+}
+
+@media (min-width: 768px) {
+    #tablesell3 {
+        margin-left: 8%;
+        width: 100%
+    }
+}
+
+td#colum-td {
+    width: 30%;
+}
+
+@media (min-width: 768px) {
+    td#colum-td {
+        width: 35%;
+    }
+}
+
+td#colum-td2 {
+    width: 25%;
+}
+
+div.checkbox#category {
+    margin-left: 3%;
+}
+
+@media (min-width: 768px) {
+    td#colum-td2 {
+        width: 30%;
+    }
+    div.checkbox#category {
+        margin-left: 8%;
+    }
+}
