--- a/src/app/sell/sell.component.html
+++ b/src/app/sell/sell.component.html
@@ -10,7 +10,7 @@
                     <h4>รายการขาย</h4>
                 </td>
                 <td align="right">
-                    <button class="btn btn-info btn-lg btn3d" data-toggle="modal" data-target="#sellModal">
+                    <button class="btn btn-info" data-toggle="modal" data-target="#sellModal">
                   <span class="glyphicon glyphicon-pencil"></span> สร้างรายการขาย</button>
                 </td>
             </tr>
@@ -54,10 +54,10 @@
     </div>
 </div>
 
-<!--Modal Singin-->
+<!-- Modal Sell Form-->
 <div class="modal fade" id="sellModal" role="dialog">
     <div class="modal-dialog">
-        <!-- Modal Sell Form-->
+
         <div id="loginbox" class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -67,61 +67,195 @@
             <div class="modal-body">
                 <form role="form">
                     <div class="form-group">
-                        <label for="inputUsernameEmail">ชื่อหนังสือ</label>
-                        <input type="text" class="form-control" id="inputUsernameEmail" placeholder="ชื่อหนังสือ" name="email" ng-model="controller.field.username">
+                        <label for="inputBookName">ชื่อหนังสือ</label>
+                        <input type="text" class="form-control" id="inputBookName" placeholder="ชื่อหนังสือ" name="bookname">
                     </div>
                     <div class="form-group">
-                        <label for="inputPassword">ราคา</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="ราคาที่ต้องการขาย" name="password" ng-model="controller.field.password" ng-enter="controller.submit()">
+                        <label for="inputPrice">ราคา</label>
+                        <input type="text" class="form-control" id="inputPrice" placeholder="ราคาที่ต้องการขาย" name="price">
                     </div>
                     <div class="form-check">
-                        <label class="form-check-label" for="category">หมวดหมู่</label>
+                        <label class="form-check-label" for="category">หมวดหมู่</label><br>
                         <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="engineering">วิศวกรรมศาสตร์</label>
                         </div>
+                        <table border="0" id="tablesell">
+                            <tr>
+                                <td id="colum-td">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox1" value="วิศวกรรมเครื่องกล">
+                                        <label for="inlineCheckbox1"> เครื่องกล </label>
+                                    </div>
+                                </td>
+                                <td id="colum-td2">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox2" value="วิศวกรรมยานยนต์">
+                                        <label for="inlineCheckbox2"> ยานยนต์ </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox3" value="วิศวกรรมอากาศยาน">
+                                        <label for="inlineCheckbox3"> อากาศยาน </label>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="colum-td">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox4" value="วิศวกรรมไฟฟ้า">
+                                        <label for="inlineCheckbox4"> ไฟฟ้า </label>
+                                    </div>
+                                </td>
+                                <td id="colum-td2">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox5" value="วิศวกรรมโยธา">
+                                        <label for="inlineCheckbox5"> โยธา </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox6" value="วิศวกรรมเคมี">
+                                        <label for="inlineCheckbox6"> เคมี </label>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+
                         <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">พื้นฐานวิศวกรรมศาสตร์</label>
+                            <label class="form-check-label" for="engineering">เตรียมสอบมัธยมปลาย</label>
                         </div>
+                        <table border="0" id="tablesell2">
+                            <tr>
+                                <td id="colum-td">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox7" value="วิศวกรรมเครื่องกล">
+                                        <label for="inlineCheckbox7"> GAT </label>
+                                    </div>
+                                </td>
+                                <td id="colum-td2">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox8" value="วิศวกรรมยานยนต์">
+                                        <label for="inlineCheckbox8"> PAT </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox9" value="วิศวกรรมอากาศยาน">
+                                        <label for="inlineCheckbox9"> คณิตศาสตร์ </label>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="colum-td">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox10" value="วิศวกรรมไฟฟ้า">
+                                        <label for="inlineCheckbox10"> ฟิสิกส์ </label>
+                                    </div>
+                                </td>
+                                <td id="colum-td2">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox11" value="วิศวกรรมโยธา">
+                                        <label for="inlineCheckbox11"> เคมี </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox12" value="วิศวกรรมเคมี">
+                                        <label for="inlineCheckbox12"> ชีววิทยา </label>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="colum-td">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox13" value="วิศวกรรมเคมี">
+                                        <label for="inlineCheckbox13"> สังคม </label>
+                                    </div>
+                                </td>
+                                <td id="colum-td2">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox14" value="วิศวกรรมเคมี">
+                                        <label for="inlineCheckbox14"> อังกฤษ </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox15" value="วิศวกรรมเคมี">
+                                        <label for="inlineCheckbox15"> วิชาอื่นๆ </label>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+
                         <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">เตรียมสอบมัธยม</label>
+                            <label class="form-check-label" for="engineering">อื่นๆ</label>
                         </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">การเขียนโปรแกรม/เทคโนโลยี</label>
-                        </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">ภาษาต่างประเทศ</label>
-                        </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">ธุรกิจ/การตลาด</label>
-                        </div>
+                        <table border="0" id="tablesell3">
+                            <tr>
+                                <td id="colum-td">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox16" value="วิศวกรรมเครื่องกล">
+                                        <label for="inlineCheckbox16"> การตลาด </label>
+                                    </div>
+                                </td>
+                                <td id="colum-td2">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox18" value="วิศวกรรมยานยนต์">
+                                        <label for="inlineCheckbox18"> โปรแกรมมิ่ง </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox19" value="วิศวกรรมอากาศยาน">
+                                        <label for="inlineCheckbox19"> กฎหมาย </label>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="colum-td">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox20" value="วิศวกรรมไฟฟ้า">
+                                        <label for="inlineCheckbox20"> ภาษาต่างประเทศ </label>
+                                    </div>
+                                </td>
+                                <td id="colum-td2">
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox21" value="วิศวกรรมโยธา">
+                                        <label for="inlineCheckbox21"> ดนตรี </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="checkbox checkbox-success checkbox-inline">
+                                        <input type="checkbox" id="inlineCheckbox22" value="วิศวกรรมเคมี">
+                                        <label for="inlineCheckbox22"> สังคม </label>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
+                    <br>
                     <div class="form-group">
                         <label for="inputYear">ปีที่พิมพ์</label>
                         <input type="text" class="form-control" id="inputYear" placeholder="พ.ศ." name="ํYear">
                     </div>
-                    <div class="form-check">
+                    <div class="form-check" id="as">
                         <label class="form-check-label" for="category">สภาพหนังสือ</label>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">เปียกน้ำ/คราบ</label>
+                        <div class="checkbox checkbox-info" id="category">
+                            <input type="checkbox" class="form-check-input" id="Check1">
+                            <label class="form-check-label" for="Check1">เปียกน้ำ/คราบ</label>
                         </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">รอยขีดเขียน</label>
+                        <div class="checkbox checkbox-info" id="category">
+                            <input type="checkbox" class="form-check-input" id="Check2">
+                            <label class="form-check-label" for="Check2">รอยขีดเขียน</label>
                         </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">รอยยับ</label>
+                        <div class="checkbox checkbox-info" id="category">
+                            <input type="checkbox" class="form-check-input" id="Check3">
+                            <label class="form-check-label" for="Check3">รอยยับ</label>
                         </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">รอยฉีกขาด</label>
+                        <div class="checkbox checkbox-info" id="category">
+                            <input type="checkbox" class="form-check-input" id="Check4">
+                            <label class="form-check-label" for="Check4">รอยฉีกขาด</label>
                         </div>
                     </div>
                     <div class="form-group">
@@ -138,21 +272,21 @@
                     </div>
                     <div class="form-check">
                         <label class="form-check-label" for="category">เลือกวิธีที่ส่งที่สินค้า</label>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">ตีพิมพ์ลงทะเบียน(ไปรษณีย์ไทย)</label>
+                        <div class="checkbox checkbox-warning" id="category">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck01">
+                            <label class="form-check-label" for="exampleCheck01">ตีพิมพ์ลงทะเบียน(ไปรษณีย์ไทย)</label>
                         </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">EMS(ไปรษณีย์ไทย)</label>
+                        <div class="checkbox checkbox-warning" id="category">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                            <label class="form-check-label" for="exampleCheck2">EMS(ไปรษณีย์ไทย)</label>
                         </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">Kerry Express</label>
+                        <div class="checkbox checkbox-warning" id="category">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck3">
+                            <label class="form-check-label" for="exampleCheck3">Kerry Express</label>
                         </div>
-                        <div class="form-check" id="category">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="engineering">SCG Express</label>
+                        <div class="checkbox checkbox-warning" id="category">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck4">
+                            <label class="form-check-label" for="exampleCheck4">SCG Express</label>
                         </div>
                     </div>
                     <br>
